--- a/templates/page.html
+++ b/templates/page.html
@@ -13,7 +13,7 @@
   <!-- Open Graph Tags -->
   <meta property="og:title" content="{{ title }}">
   <meta property="og:description" content="{{ description }}">
-  <meta property="og:url" content="https://freelankarx.com/{{ keyword | replace(' ', '-') | lower }}.html">
+  <meta property="og:url" content="https://freelankarx.com/{{ keyword | replace(' ', '-') | lower }}/index.html">
   <meta property="og:type" content="website">
 
   <!-- Schema.org JSON-LD -->
